# ramadan

./: .env.example  .gitignore  README.md  from_json_to_m3u.py  main.py  pyproject.toml  requirements.txt  series_wecima.py
wecima/Settings/: __init__.py  config.py
wecima/helpers/: __init__.py  constants.py  download_manager.py  spider.py  util.py
