[project]
name = "ramadan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "appdirs==1.4.4",
    "beautifulsoup4==4.12.3",
    "certifi==2024.12.14",
    "colorama==0.4.6",
    "cssselect==1.2.0",
    "fake-useragent==2.0.3",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-html==0.11.0.dev0",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "lxml==5.3.0",
    "lxml-html-clean==0.1.1",
    "parse==1.20.2",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pyee==11.1.1",
    "pyppeteer==2.0.0",
    "pyquery==2.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "selectolax==0.3.27",
    "setuptools==75.8.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.37",
    "streamlit>=1.42.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "urllib3==1.26.20",
    "w3lib==2.2.1",
    "websockets==10.4",
    "yt-dlp==2025.1.26",
    "zipp==3.21.0",
]
